--- a/views/about.ejs
+++ b/views/about.ejs
@@ -70,9 +70,10 @@
           <li><a class="active" href="/about">A propos</a></li>
           <li><a href="/services">Services</a></li>
           <li><a href="/testimonials">Témoignage</a></li>
-          <li><a href="/pricing">Profilage</a></li>
-          <li><a href="/portfolio">Portfolio</a></li>
-          <li><a href="/blog">Profil</a></li>
+          <li><a href="/categories">Categories</a></li>
+          <li><a href="/blog">Emplois</a></li>
+          <li><a href="/account">Profil</a></li>
+
           <li class="dropdown"><a href="#"><span>Menu déroulant</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Menu déroulant 1</a></li>
