--- a/views/connexion.ejs
+++ b/views/connexion.ejs
@@ -39,7 +39,8 @@
               <div class="form-check">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1"> 
                 <label class="form-check-label" for="exampleCheck1"> Se souvenir de moi</label> 
-                <p>Pas de compte? <a href="/inscription">S'inscrire</a></p>
+                <p class="mb-0">Pas de compte? <a href="/inscription">S'inscrire</a></p>
+                <p>Vous etes administrateur? <a href="/admin">se connecter</a></p>
                 <button type="submit" class="btn btn-outline-danger mt-2 mb-4 btn-white">Connexion</button>
               </div>
             </div>
