--- a/views/connexionAdmin.ejs
+++ b/views/connexionAdmin.ejs
@@ -10,7 +10,7 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="./plugins/fontawesome-free/css/all.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="./dist/css/adminlte.min.css">
+  <link rel="stylesheet" href="./dist/css/adminlte.css">
 </head>
 <body>
     <br><br><br><br><br>
@@ -25,27 +25,23 @@
           </div>
           <!-- /.card-header -->
           <!-- form start -->
-          <form>
-            <div class="card-body">
+          <form class="formData" method="post" action="/adminLogin">
+            <div class="card-body pb-0">
               <div class="form-group">
                 <label for="name">Nom</label>
-                <input type="name" class="form-control" id="name" placeholder="Entrer votre nom">
+                <input required type="name" name="username" class="form-control" id="name" placeholder="Entrer votre nom">
               </div>
-            <div class="form-group">
+              <div class="form-group">
                 <label for="exampleInputPassword1">Mot de passe</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Entrer un mot de passe">
-              </div>
-
+                <input required type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Entrer un mot de passe">
+                <% if (messages.error) { %>
+                  <div class="mt-2 text-danger"><%= messages.error %></div>
+                <% } %>
               </div>
               <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1"> 
-                   <label class="form-check-label" for="exampleCheck1"> Se souvenir de moi</label> 
-
+                <p class="mb-0">Retour a <a href="/">l'Acceuil</a></p>
+                <button type="submit" class="btn btn-outline-danger mt-4 mb-4 btn-white">Connexion</button>
               </div>
-            <!-- /.card-body -->
-
-            <div class="card-footer">
-              <button type="submit" class="btn btn-white"><a href="Administrateur.html">Soumettre</a></button>
             </div>
           </form>
         </div>
