--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -60,31 +60,14 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Acceuil</a></li>
-          <li><a href="about.html">A propos</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="testimonials.html">Testimonials</a></li>
-          <li><a href="pricing.html">Profilage</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="blog.html">profil</a></li>
-          <li class="dropdown"><a href="#"><span>Menu déroulant</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Menu déroulant 1</a></li>
-              <li class="dropdown"><a href="#"><span>Menu déroulant</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Menu déroulant a1</a></li>
-                  <li><a href="#">Menu déroulant a2</a></li>
-                  <li><a href="#">Menu déroulant a3</a></li>
-                  <li><a href="#">Menu déroulant a4</a></li>
-                  <li><a href="#">Menu déroulant a5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Menu déroulant 2</a></li>
-              <li><a href="#">Menu déroulant 3</a></li>
-              <li><a href="#">Menu déroulant 4</a></li>
-            </ul>
-          </li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="/">Acceuil</a></li>
+          <li><a href="/about">A propos</a></li>
+          <li><a href="/services">Services</a></li>
+          <li><a href="/testimonials">Témoignage</a></li>
+          <li><a href="/categories">Categories</a></li>
+          <li><a href="/blog">Emplois</a></li>
+          <li><a href="/account">Profil</a></li>
+          <li><a class="active"  href="/contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
