--- a/views/testimonials.ejs
+++ b/views/testimonials.ejs
@@ -65,9 +65,10 @@
           <li><a href="about.html">A propos</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a class="active" href="testimonials.html">Temoignages</a></li>
-          <li><a href="pricing.html">Profilage</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="blog.html">Profil</a></li>
+          <li><a href="/categories">Categories</a></li>
+          <li><a href="/blog">Emplois</a></li>
+          <li><a href="/account">Profil</a></li>
+
           <li class="dropdown"><a href="#"><span>Menu deroulant</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Menu deroulant 1</a></li>
